Address comments
Signed-off-by: Yi Li <yi.li@databricks.com>